Simplify getLogForId to use Stream.toList()